@@ -3,7 +3,10 @@ Version 2.0.0
 
 Deprecations (DEP):
 - PyPDF2 2.0 requires Python 3.6+. Python 2.7 and 3.5 support were dropped.
+- PdfFileReader and PdfFileMerger no longer have the `overwriteWarnings`
+  parameter. The new behavior is `overwriteWarnings=False`.
 - utils:
+  * `formatWarning` was removed
   * `isInt(obj)`: Use `instance(obj, int)` instead
   * `u_(s)`: Use `s` directly
   * `chr_(c)`: Use `chr(c)` instead
